# double-go

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: FetchLibTorch.cmake
include/double-go/: board.h  bot.h  double-go.h  model.h  types.h
src/: board.cpp  bot.cpp  bot_gui.cpp  gui.cpp  gui_common.cpp  gui_common.h  main.cpp  model.cpp
tests/: CMakeLists.txt  main_test.cpp  model_test.cpp  torch_smoke_test.cpp  zobrist_test.cpp
